# apnggif

./: CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  apng2gif.cpp  apng2gif.h  apnggif.py  py.cpp  pyproject.toml  setup.py  tests.py
.github/workflows/: build.yml  test.yml
